<resources>
  <string name="app_name">Agenda</string>
  <string name="nome">Nome</string>
  <string name="telefone">Telefone</string>
  <string name="email">Email</string>
  <string name="salvar_aluno">Salvar o aluno</string>
  <string name="remover">Remover</string>
  <string name="sobrenome">Sobrenome</string>
  <string name="lista_de_alunos">Lista de Alunos</string>
  <string name="novoAluno">Novo Aluno</string>
  <string name="volta_para_o_menu">Volta para o menu</string>
  <string name="cancelar_o_cadastro">Cancelar o Cadastro</string>
  <string name="foto_de_perfil">Foto de Perfil</string>
  <string name="data">Data de Nascimento</string>
  <string name="info_perfil">Foto de Perfil:</string>
  <string name="tirar_foto">Tirar foto</string>
  <string name="baixar_provas">Baixar provas</string>
  <string name="materia">Materia</string>
  <string name="data_prova">Data</string>
  <string name="escolher_foto">Escolher foto</string>
  <string name="email_login">E-mail</string>
  <string name="senha_login">Senha</string>
  <string name="botao_login">LOGIN</string>
  <string name="cadastre_se">Cadastre-se</string>
  <string name="esqueci_a_senha">Esqueci a senha</string>
  <string name="esqueceu_a_senha">Esqueceu a senha?</string>
  <string name="confirmar_senha">Confirmar senha</string>
  <string name="cadastrar">Cadastrar</string>
  <string name="cep">CEP</string>
  <string name="cidade">Cidade</string>
  <string name="rua">Rua</string>
  <string name="estado">Estado</string>
  <string name="bairro">Bairro</string>
  <string name="numero">Nº</string>
  <string name="nao_sei_meu_cep"> ? </string>
  <string name="buscar">BUSCAR</string>
  <string name="resultado">Resultado (endereços)</string>
  <string name="digite_a_mensagem">Digite a mensagem</string>
  <string name="desconectar">Desconectar</string>
  <string name="tittle_prefs_frequencia_sincronizacao">Frequência de sincronização</string>
  <string name="site">
        <a href="http://solumobi.com.br/"> Software by SoluMobi</a>
    </string>
  <string name="msg_token_fmt">token</string>
  <string name="redefinir">Redefinir</string>
  <string name="chat">Chat</string>
  <string name="volta">Volta</string>
  <string name="contatos">Contatos</string>
  <string name="mensagens">Mensagens</string>
  <string name="login">Login</string>
  <string name="recuperacao_de_senha">Recuperação de senha</string>
  <string name="cadastro">Cadastro</string>
  <string name="menu">Menu</string>
  <string name="formulario">Formulário</string>
  <string name="procura_cep">Procura CEP</string>
  <string name="enviar">Enviar</string>
  <string name="botao_adc_aluno">Botao adicionar aluno</string>
  <string name="nota">Nota</string>
  <string name="editar">Editar</string>
  <string name="notas">Notas</string>
  <string name="materias">Matérias</string>
  <string-array name="states">
    <item>"*Estado"</item>
    <item>"Acre (AC)"</item>
    <item>"Alagoas (AL)"</item>
    <item>"Amapá (AP)"</item>
    <item>"Amazonas (AM)"</item>
    <item>"Bahia (BA)"</item>
    <item>"Ceará (CE)"</item>
    <item>"Distrito Federal (DF)"</item>
    <item>"Espírito Santo (ES)"</item>
    <item>"Goiás (GO)"</item>
    <item>"Maranhão (MA)"</item>
    <item>"Mato Grosso (MT)"</item>
    <item>"Mato Grosso do Sul (MS)"</item>
    <item>"Minas Gerais (MG)"</item>
    <item>"Pará (PA)"</item>
    <item>"Paraíba (PB)"</item>
    <item>"Paraná (PR)"</item>
    <item>"Pernambuco (PE)"</item>
    <item>"Piauí (PI)"</item>
    <item>"Rio de Janeiro (RJ)"</item>
    <item>"Rio Grande do Norte (RN)"</item>
    <item>"Rio Grande do Sul (RS)"</item>
    <item>"Rondônia (RO)"</item>
    <item>"Roraima (RR)"</item>
    <item>"Santa Catarina (SC)"</item>
    <item>"São Paulo (SP)"</item>
    <item>"Sergipe (SE)"</item>
    <item>"Tocantins (TO)"</item>
  </string-array>
</resources>