<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_margin="8dp">

  <androidx.cardview.widget.CardView
    android:id="@+id/cardview_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="15dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="8dp">

      <Button
        android:id="@+id/botao_lista_de_alunos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/botao_redondo"
        android:text="@string/lista_de_alunos"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

      <Button
        android:id="@+id/botao_novo_aluno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/botao_redondo"
        android:text="@string/novoAluno"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/botao_lista_de_alunos"
        app:layout_constraintStart_toStartOf="@id/botao_lista_de_alunos"
        app:layout_constraintTop_toBottomOf="@id/botao_lista_de_alunos"
        app:layout_constraintVertical_bias="0.0" />

      <Button
        android:id="@+id/botao_chat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/botao_redondo"
        android:text="@string/chat"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/botao_lista_de_alunos"
        app:layout_constraintStart_toStartOf="@id/botao_lista_de_alunos"
        app:layout_constraintTop_toBottomOf="@id/botao_novo_aluno"
        app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>

  <TextView
    android:id="@+id/software_By_Solumobi"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    android:text="@string/site"
    android:textColor="#FFFF"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/cardview_menu"
    app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>