<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="25dp"
        tools:context=".ui.activity.ProcuraCepActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_procura_cep_cidade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                app:layout_constraintBottom_toTopOf="@id/activity_procura_cep_rua"
                app:layout_constraintEnd_toStartOf="@id/activity_procura_cep_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <EditText
                    android:id="@+id/activity_procura_cep_edit_text_cidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cidade"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:nextFocusForward="@id/activity_formulario_aluno_nome"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/activity_procura_cep_estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estado"
                app:layout_constraintBottom_toTopOf="@id/activity_procura_cep_spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/activity_procura_cep_spinner"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Spinner
                android:id="@+id/activity_procura_cep_spinner"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                app:layout_constraintBottom_toBottomOf="@id/activity_procura_cep_cidade"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@id/activity_procura_cep_cidade"
                app:layout_constraintTop_toBottomOf="@id/activity_procura_cep_estado"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_procura_cep_rua"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/activity_procura_cep_resultado"
                app:layout_constraintEnd_toEndOf="@id/activity_procura_cep_cidade"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_procura_cep_cidade"
                app:layout_constraintVertical_bias="0.0">

                <EditText
                    android:id="@+id/activity_procura_cep_edit_text_rua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rua"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/activity_procura_cep_botao_busca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/ic_perfil_background"
                android:onClick="searchAddress"
                android:padding="6dp"
                android:text="@string/buscar"
                app:layout_constraintBottom_toBottomOf="@id/activity_procura_cep_rua"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/activity_procura_cep_rua"
                app:layout_constraintTop_toBottomOf="@id/activity_procura_cep_spinner"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/activity_procura_cep_resultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/resultado"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/activity_procura_cep_list_view_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_procura_cep_rua"
                app:layout_constraintVertical_bias="0.0" />

            <ListView
                android:id="@+id/activity_procura_cep_list_view_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_procura_cep_resultado"
                tools:listitem="@layout/address_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>